# louvre

./: .gitignore  Cargo.toml  README.md
assets/: hilbert.json  inter1.json  inter2.json  inter3.json  inter4.json  water2.json
bench/rust/: Cargo.toml
bench/rust/src/: main.rs
bench/wasm/: Cargo.toml  index.html
bench/wasm/src/: main.rs
docs/: index.html  page-b8f66e77d808f40d.js  page-b8f66e77d808f40d_bg.wasm  page-d57b15ef65d01194.js  page-d57b15ef65d01194_bg.wasm  page-dcdfc0036da8cd5e.js  page-dcdfc0036da8cd5e_bg.wasm  style-29e6338276875613.css
louvre/: Cargo.toml
louvre/src/: html.rs  lib.rs  structures.rs  triangulate.rs  utils.rs
louvre/tests/: test.rs
page/: Cargo.toml  Trunk.toml  index.html
page/src/: main.rs
src/: polygon.rs
src/polygon/: triangulation.rs  utils.rs
tests/: test_test.rs
