[workspace]
resolver="2"
members = [
  "louvre",
  "page",
  "louvre-test",
  "bench/rust",
  "bench/wasm",
  "draw"
]

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true