[package]
name = "page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
wasm-bindgen = "0.2.92"
louvre = { path="../louvre", features=["html"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
js-sys = "0.3.69"
gloo-console = "0.3.0"
gloo-net = "0.5.0"
webtric = { version = "0.1.3", features = ["sycamore"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
  "HtmlCanvasElement", "MouseEvent"
]