[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
wasm-bindgen = "0.2.92"
louvre = { path="../../louvre" }
gloo-net = "0.5.0"
gloo-console = "0.3.0"
